--- a/todo
+++ b/todo
@@ -8,15 +8,22 @@ Solde banque
 Centralisateur ( java EJB ) no manambatra ireo système ireo  
 
 	1° Compte Courant
-		entrée argent(client, montant, idCompte, date)
+		entrée argent(client, montant, idCompte, date) -> élevé
 			Incremente le solde du compte courant, mise à jour dans compte courant et insertion dans operation compte courant
-		sortie argent(client, montant, idCompte, date)
+
+		sortie argent(client, montant, idCompte, date) -> élevé
 			Décremente le solde du compte courant, mise à jour dans compte courant et insertion dans operation compte courant
 
+		Consultation solde -> élevé
+			getSoldeCompteCourant(idCompte)
+
+		Historique des operations -> faible
+			getOperationsCompteCourant(idCompte, dateDebut, dateFin)
 
 	2° Compte Depot
 		ouvrirCompteDepot(client, compte, montant, taux, dateOuverture, dateEcheance)
-			m'insérer compte dans la base
+			Insère un nouveau compte dépôt avec capital + taux
+
 		fermerCompteDepot(client, compte, date)
 
 	3° Pret
@@ -26,3 +33,6 @@ Centralisateur ( java EJB ) no manambatra ireo système ireo
 			rembourserPret(client, montant, date, idPret)
 				mettre à jour l'échéance
 				si chaque status est payée, le pret est remboursé, changement de etatPret
+			Consultation prêt
+				getPretByClient(idClient)
+				getEcheancesByPret(idPret)
